--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
    	<div id="wrap">
 		<%=render :partial => 'share/header'%>
 		<%= yield %>
+		<%=render :partial => 'share/footer'%>
 	</div>
 </body>
 </html>
