--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -2,10 +2,15 @@
 		<div class="yue"></div>
 		<div class="backToTop"><a><img src="images/reback.gif" /></a></div>
 		<div class="more">
-			<ul>
+			<ul style="width:350px; padding-left:580px;">
 				<li class="phone"><img src="images/phone.gif" /></li>
+				<li>电话：0872-2515970</li>
 				<li>地址：云南省大理市大理古城红龙井16号(AM9:00~PM19:00)</li>
-				<li>QQ：370605998  623128611  179711408</li>
+			</ul>
+			<ul>
+				<li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=370605998&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:370605998:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
+				<li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2674555426&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2674555426:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
+				<li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2399391969&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2399391969:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></li>
 			</ul>
 		</div>
-	</div>  
+	</div>
