--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,17 @@
 <head>
   <title>Photography</title>
   <%= stylesheet_link_tag 'frame'%>
+  <%= stylesheet_link_tag 'content'%>
   <%= csrf_meta_tag %> 
   <%= yield :head%>
-   
+  <script src="javascripts/jquery-zzjs.js" type=text/javascript></script>
+<script src="javascripts/imgPlay.js" type=text/javascript></script>
+<link rel="stylesheet" href="stylesheets/pic.css" type="text/css" />
+  <%= javascript_include_tag 'jquery-1.3.2'%>
+<script type="text/javascript" src="javascripts/jquery.history.js"></script>
+<script type="text/javascript" src="javascripts/jquery.galleriffic.js"></script>
+<script type="text/javascript" src="javascripts/jquery.opacityrollover.js"></script>
+<script type="text/javascript" src="javascripts/pic.js"></script> 
 </head>
 <body>
    	<div id="wrap">
