--- a/app/views/admin/welcome/index.html.erb
+++ b/app/views/admin/welcome/index.html.erb
@@ -1,1 +1,2 @@
-<%= link_to "zhao pian", admin_productions_path %>
+<%= link_to "zhao pian", admin_productions_path %>     
+<%= link_to "messages", admin_messages_path %>
