--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,7 +1,6 @@
 <%= content_for :head do%>
 	<%= stylesheet_link_tag 'content'%>
-<% end %>	
-	<div class="content">
+<% end %>		<div class="content">
 		<div class="left">
 			<h2><img src="images/content/art_title.gif" /></h2>
 			<ul> 
@@ -31,7 +30,7 @@
 					<li><%= @production.clothing%></li>
 				</ul>
 				<ul>
-					<h4>化妆造型：</h4>
+					<h4>化妆造型f.：</h4>
 					<li><%= @production.makeup%></li>
 				</ul>
 				<ul>
