--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,6 @@
+<%= content_for :head do %>
+	<%= javascript_include_tag 'jquery.photo' %>
+<% end -%>
 <div class="content">
 		<div class="left">
 			<h2><img src="images/content/wedding_title.gif" /></h2>
