--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
 		<div class="yue"></div>
-		<div class="backToTop"><a><img src="images/reback.gif" /></a></div>
+		<!-- <div class="backToTop"><a><img src="images/reback.gif" /></a></div> -->
 		<div class="more">
 			<ul style="width:350px; padding-left:580px;">
 				<li class="phone"><img src="images/phone.gif" /></li>
