--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -52,7 +52,7 @@
 						</li>   
 				</ul>  
 				<div>     
-				<%= f.submit '提交'%>
+				<%= f.submit '提交', :style => 'clear:both;position:absolute;top:740px;left:480px;'%>
 				</div>
 				<% end -%>  
 			</div>
