--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,6 @@
    <%= content_for :head do %>
-	<script type="text/javascript" charset="utf-8">
-		.image-wrapper {
-			overflow:hidden;
-		}
-	</script>>
+   	<script type="text/javascript" src="javascripts/pic.js"></script> 
+
 	<% end %>
 
 	<div class="content">
