--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header"></div>
-<div class="nav" style="min-width:1302px;">
+<div class="nav">
 	<ul>
 		<li>   
 			<%=link_to	'首页', root_path%>
