--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,10 @@
    <%= content_for :head do %>
+   <link rel="stylesheet" href="stylesheets/pic.css" type="text/css" />
+   <script src="javascripts/jquery-zzjs.js" type=text/javascript></script>
+   <script src="javascripts/imgPlay.js" type=text/javascript></script>
+   <script type="text/javascript" src="javascripts/jquery.history.js"></script>
+   <script type="text/javascript" src="javascripts/jquery.galleriffic.js"></script>
+   <script type="text/javascript" src="javascripts/jquery.opacityrollover.js"></script>
    	<script type="text/javascript" src="javascripts/pic.js"></script> 
 
 	<% end %>
