--- a/app/views/admin/welcome/index.html.erb
+++ b/app/views/admin/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<%= link_to "zhao pian", admin_productions_path %>     
-<%= link_to "messages", admin_messages_path %>
+
+
+<div class="container">
+
+  <h1></h1>
+  <p></p>
+    
+  
+
+</div> 
