--- a/app/views/admin/productions/index.html.erb
+++ b/app/views/admin/productions/index.html.erb
@@ -1,9 +1,25 @@
-<h1>Listing admin_productions</h1>
-<%= link_to 'New Production', new_admin_production_path %>
-<ul>
-<% @admin_productions.each do |admin_production| %>
-    <li><%= link_to admin_production.name, admin_production %> <%= %></li>
-<% end %>
+<ul class="breadcrumb">
+<li>
+	<%= link_to "首页", admin_path %>
+	<span class="divider">/</span>
+</li>
+<li class='active'>
+	<%= link_to "产品", '#'%>
+</li>
 </ul>
+<div class="btn-group" style ='padding:0 0  20px 15px;'>
+	<%= link_to '添加新产品', new_admin_production_path, :class => 'btn' %>
+</div>
+
+
+<ul class="nav nav-list">
+	<li class="nav-header">
+	  产品列表
+	</li>
+	<% @admin_productions.each do |admin_production| %>
+	    <li><%= link_to admin_production.name, admin_production %> </li>
+	<% end %>
+</ul>
+
 
 
