--- a/app/views/admin/share/_header.html.erb
+++ b/app/views/admin/share/_header.html.erb
@@ -6,12 +6,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Project name</a>
+      <a class="brand" href="#">越摄影</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><%= link_to "zhao pian", admin_productions_path %>   </li>
-          <li><%= link_to "messages", admin_messages_path %></li>
+          <li>
+            <%= link_to "首页", admin_path %>
+          </li>
+          <li><%= link_to "产品", admin_productions_path %>   </li>
+          <li><%= link_to "消息", admin_messages_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
