--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -1,6 +1,34 @@
-<h1>Listing messages</h1>        
-<ul>
-<% @admin_messages.each do |m| %>
-    <li><%= link_to m.title || '没主题', m %></li>
-<% end %>
+<ul class="breadcrumb">
+	<li>
+		<%= link_to "首页", admin_path %>
+		<span class="divider">/</span>
+	</li>
+	<li class='active'>
+		<%= link_to "消息", '#'%>
+	</li>
 </ul>
+<div class='page-header'><h1>消息</h1></div> 
+<table class='table table-striped'>
+	<thead>
+		<tr><th>#</th>
+				<th>留言主题</th>
+				<th>联系电话</th>
+				<th>qq</th>
+				<th>邮箱</th>
+				<th>发送人</th>
+				<th>时间</th></tr>
+	</thead>
+	<tbody>
+		<% @admin_messages.each_with_index do |m, index| %>
+		    <tr>
+		    	<td><%= index + 1%></td>
+		    	<td><%= link_to m.title || '没主题', m %></td>
+    		    <td><%= m.phone %></td>
+		     	<td><%= m.qq %></td>
+		     	<th><%= m.email%></th>
+		        <td><%= m.name %></td>
+		        <td><%= m.created_at.to_s(:db) %></td>
+		    </tr>
+		<% end %>
+	</tbody>
+</table>
