--- a/app/views/admin/messages/show.html.erb
+++ b/app/views/admin/messages/show.html.erb
@@ -1,42 +1,59 @@
-<div>
-	<%= link_to "messages", admin_messages_path %> > <%= @admin_message.title || '没主题' %>
+<ul class="breadcrumb">
+  <li>
+    <%= link_to "首页", admin_path %>
+    <span class="divider">/</span>
+  </li>
+  <li>
+    <%= link_to "消息", admin_messages_path%>
+    <span class="divider">/</span>
+  </li>
+  <li  class='active'>
+    <%= link_to @admin_message.get_title, '#' %>
+  </li>
+</ul>
+<div class='page-header'>
+  <h1><%= @admin_message.title%><span style='margin-left: 20px;font-size: 14px;color:silver'><%="(#{@admin_message.created_at.to_s(:db)})" %></span></h1>
 </div>
- <div class="main">
-		<ul class="option">
-			<li>您的称呼：</li>
-			<li>联系电话：</li>
-			<li>QQ：</li>
-			<li>邮箱：</li>
-			<li>地址：</li>
-			<li>留言主题：</li>
-			<li>内容：</li>
-		</ul>
-		<ul class="text">
-		   
-			   <li>   
-				   <%= @admin_message.name %>   
-				</li>
-				<li>
-				   <%= @admin_message.phone %> 
-				</li> 
-				   
-				<li>
-				   <%= @admin_message.qq %>    
-				</li>
-				<li>
-					<%= @admin_message.email %>
-				</li>
-				<li>
-					<%= @admin_message.address %> 
-				</li> 
-				<li>
-					<%= @admin_message.title%>
-				 </li>
-				<li>
-					<%= @admin_message.content %> 
-				</li>    
-				<li>
-					<%= @admin_message.created_at.strftime("%Y/%m/%d") %>
-				</li>
-		</ul>
-	</div>
+
+<div class='row'>
+      <div class='span12'>
+        <h2>发送人</h2>
+        <p><%= @admin_message.name%></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>联系电话</h2>
+        <p><%= @admin_message.phone %></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>QQ</h2>
+        <p><%= @admin_message.qq %></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>邮箱</h2>
+        <p><%= @admin_message.email %></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>地址</h2>
+        <p><%= @admin_message.address %></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>留言主题</h2>
+        <p><%= @admin_message.title %></p>
+      </div>
+</div>
+<div class='row'>
+      <div class='span12'>
+        <h2>留言内容</h2>
+        <p><%= @admin_message.content %></p>
+      </div>
+</div>
