--- a/app/views/admin/productions/edit.html.erb
+++ b/app/views/admin/productions/edit.html.erb
@@ -1,10 +1,26 @@
+<ul class="breadcrumb">
+<li>
+	<%= link_to "首页", admin_path %>
+	<span class="divider">/</span>
+</li>
+<li>
+	<%= link_to "产品", admin_productions_path%>
+	<span class="divider">/</span>
+</li>
+<li>
+	<%= link_to @admin_production.name, @admin_production%>
+	<span class="divider">/</span>
+</li>
+<li class='active'>
+	<%= link_to "编辑", '#'%>
+</li>
+</ul>
+<div class='page-header'>
+	<h1><%= @admin_production.name %></h1>
 
-<div>
-	<%= link_to  'productions',admin_productions_path%> > @admin_production.name
 </div>
-<h1>Editing admin_production</h1>
 
-<%= link_to 'Back', @admin_production %>
+
 
 <%= render 'form' %>
 
