--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,6 +20,7 @@
 </head>
 <body>
   <%= render :partial => 'admin/share/header'%>
-	<%= yield %>
+
+	<div class='container'><%= yield %></div>
 </body>
 </html>
