--- a/app/views/admin/productions/_form.html.erb
+++ b/app/views/admin/productions/_form.html.erb
@@ -20,55 +20,55 @@
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">类型</label>
       <div class="controls">
         <%= f.select :category, [['艺术照', 1], ['婚纱照', 2]], :class => 'input-xlarge' %>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">服装</label>
       <div class="controls">
         <%=f.text_area :clothing, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">拍摄时间</label>
       <div class="controls">
         <%=f.text_area :time, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">化妆</label>
       <div class="controls">
         <%=f.text_area :makeup, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">场景</label>
       <div class="controls">
         <%=f.text_area :place, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">服务</label>
       <div class="controls">
         <%=f.text_area :service, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">照片</label>
       <div class="controls">
         <%=f.text_area :photos, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">赠品</label>
       <div class="controls">
         <%=f.text_area :gift, :class => 'input-xlarge', :rows => 3%>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input01">名称</label>
+      <label class="control-label" for="input01">提示</label>
       <div class="controls">
         <%=f.text_area :tip, :class => 'input-xlarge', :rows => 3%>
       </div>
