--- a/app/views/admin/productions/show.html.erb
+++ b/app/views/admin/productions/show.html.erb
@@ -14,7 +14,7 @@
 <div class='page-header'>
   <h1><%= @admin_production.name%></h1>
 </div>
-<div class="btn-group" style ='padding:0 0  20px 15px;'>
+<div class="btn-group">
   <%= link_to edit_admin_production_path(@admin_production), 
   :class => 'btn btn-primary' do %>
     <i class='icon-pencil icon-white'></i> 编辑
