--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Photography Admin</title>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
