--- a/app/views/admin/share/_header.html.erb
+++ b/app/views/admin/share/_header.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">越摄影</a>
+      <a class="brand" href="/">越摄影</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li>
@@ -16,7 +16,13 @@
           <li><%= link_to "相册", admin_photos_path %>   </li>
           <li><%= link_to "消息", admin_messages_path %></li>
         </ul>
-      </div><!--/.nav-collapse -->
+        <ul class='nav pull-right'>
+          <li>
+            <%= link_to "退出", login_out_path %>
+          </li>
+        </ul>
+      </div>
+
     </div>
   </div>
 </div>
