--- a/app/views/admin/albums/index.html.erb
+++ b/app/views/admin/albums/index.html.erb
@@ -10,6 +10,7 @@
 
 <div class="btn-group">
 	<%= link_to '新建相册', new_admin_album_path, :class => 'btn' %>
+	<%= link_to '上传照片', new_admin_photo_path, :class => 'btn' %>
 </div>
 
 <table class='table table-striped'>
