--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -2,6 +2,7 @@
   <%= javascript_include_tag 'jquery-1.3.2' %>
   <script type="text/javascript">
     $(function () {
+      $.ajaxSetup({beforeSend:function(a){a.setRequestHeader("X-CSRF-Token",$('meta[name="csrf-token"]').attr("content"))}});
       var album_id = $('#album_id').val();
       $('.destroy_album').click(function () {
         if (confirm("确定删除此相册？")) {
